--- a/C35.C20/Makefile
+++ b/C35.C20/Makefile
@@ -7,11 +7,11 @@ run: build
 start:
 	./encrypt in.txt out.txt log.txt
 
-test: encrypt-driver-test.c encrypt-module-test.c encrypt-module.h circular-buffer.h reset-controller.h
-	gcc encrypt-driver-test.c encrypt-module-test.c -lpthread -o encrypt-test
+# test: encrypt-driver-test.c encrypt-module-test.c encrypt-module.h circular-buffer.h reset-controller.h
+# 	gcc encrypt-driver-test.c encrypt-module-test.c -lpthread -o encrypt-test
 
-run-test: test
-	./encrypt-test encrypt-module.h cyper.txt
+# run-test: test
+# 	./encrypt-test encrypt-module.h cyper.txt
 
-start-test:
-	./encrypt-test encrypt-module.h cyper.txt
+# start-test:
+# 	./encrypt-test encrypt-module.h cyper.txt
